--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,9 @@ div.container div.box-input > button.edit-tafera {
     left: 0;
     bottom: 0;
 
+    animation-name: apper-right;
+    animation-duration: .3s;
+
     display: none;
 }
 
@@ -140,12 +143,13 @@ div.task p, i {
     color: #d6ac4e;
 }
 
-div.task i {
+div.task div.icons i {
+    z-index: 999;
     cursor: pointer;
     padding-left: 1.5rem;
 }
 
-div.task i:hover {
+div.task div.icons i:hover {
     color: #dabc7e;
 }
 
@@ -157,15 +161,7 @@ div.icons {
 
 div.edit {
     height: 20rem;
-
-    margin: auto;
     padding: 1rem;
-    /* position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0; */
-
-    /* background: rgba(0,0,0,0.8); */
 
     display: none;
     align-items: center;
@@ -225,48 +221,6 @@ div.edit-input button {
 
 div.edit-input button:hover {
     background: #dabc7e;   
-}
-
-div.confirm {
-    width: 30rem;
-    height: 10rem;
-
-    margin-top: 7rem;
-
-    display: none;
-    align-items: center;
-    justify-content: space-between;
-
-    animation-name: apper-up;
-    animation-duration: .4s;
-}
-
-div.confirm button {
-    width: 10rem;
-    height: 4rem;
-
-    border: .1rem solid #d6ac4e;
-    border-radius: .5rem;
-
-    cursor: pointer;
-}
-
-div.confirm button.cancel {
-    background: rgba(141, 3, 3, 0.856);
-    color: #dabc7e;
-}
-
-div.confirm button.cancel:hover {
-    background: rgba(189, 6, 6, 0.856);
-}
-
-div.confirm button.confirm {
-    background: rgb(4, 211, 97);
-    color: #121214;
-}
-
-div.confirm button.confirm:hover {
-    background: rgb(56, 248, 142);
 }
 
 @keyframes apper-left {
